_old/dinoco_docs/src/content/v0.0.1/de-de/orm/find-first.md
# find_first

Wird verwendet, um maximal einen Datensatz abzurufen.

---

## Was Sie tun können

Es stellt die gleichen Methoden wie `find_many` zur Verfügung:

- `select`
- `cond`
- `take`
- `skip`
- `order_by`
- `includes`
- `count`
- `read_in_primary`
- `execute`

## Beschreibung der Methoden

- `.select::&lt;T&gt;()`: tauscht die Standardprojektion gegen eine benutzerdefinierte Projektion aus.
- `.cond(...)`: fügt Filter zur Abfrage hinzu.
- `.take(...)`: begrenzt die maximale Anzahl der berücksichtigten Datensätze.
- `.skip(...)`: überspringt Datensätze, bevor das erste Ergebnis ausgewählt wird.
- `.order_by(...)`: definiert, welcher Datensatz zuerst berücksichtigt werden soll.
- `.includes(...)`: lädt Beziehungen zusammen mit dem Hauptobjekt.
- `.count(...)`: berechnet Beziehungszähler in der Projektion.
- `.read_in_primary()`: erzwingt das Lesen aus der primären Datenbank.
- `.execute(&client)`: führt die Abfrage aus und gibt maximal ein Element zurück.

## Rückgabe

Ohne `select::&lt;T&gt;()` ist die Rückgabe:

```rust
DinocoResult<Option<M>>
```

Mit `select::&lt;T&gt;()` wird die Rückgabe:

```rust
DinocoResult<Option<T>>
```

## Grundlegendes Beispiel

```rust
let user = dinoco::find_first::<User>()
    .cond(|w| w.id.eq(10))
    .execute(&client)
    .await?;
```

## Beispiel mit Select

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserSummary {
    id: i64,
    name: String,
}

let user = dinoco::find_first::<User>()
    .select::<UserSummary>()
    .cond(|w| w.id.eq(1_i64))
    .execute(&client)
    .await?;
```

## Beispiel mit Beziehung

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let user = dinoco::find_first::<User>()
    .select::<UserWithPosts>()
    .cond(|x| x.id.eq(1_i64))
    .includes(|x| x.posts())
    .execute(&client)
    .await?;
```

## Beispiel mit Sortierung

```rust
let latest_user = dinoco::find_first::<User>()
    .order_by(|x| x.id.desc())
    .execute(&client)
    .await?;
```

## Nächste Schritte

- [**`find_many::&lt;M&gt;()`**](/v0.0.1/orm/find-many): sucht mehrere Datensätze.
- [**`count::&lt;M&gt;()`**](/v0.0.1/orm/count): Zählung von Datensätzen.
